tdf#153341: try to parse alpha value when copying HTML text

Change-Id: Ic7240358be19e73f3c3f021e0de9414e3e988aa6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146546
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>